force-app/main/default/objects/ssot__LoyaltyProgramGroupMemberRelationship__dlm/fields/ssot__CanMemberRedeemFromGroup__c.field-meta.xml
<CustomField>
    <fullName>ssot__CanMemberRedeemFromGroup__c</fullName>
    <label>Can Member Redeem From Group</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CanMemberRedeemFromGroup</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>