force-app/main/default/objects/ssot__LoyaltyProgramGroupMemberRelationship__dlm/fields/ssot__ContributionCalculationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContributionCalculationType__c</fullName>
    <label>Contribution Calculation Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContributionCalculationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>