force-app/main/default/objects/ssot__LoyaltyProgramGroupMemberRelationship__dlm/fields/ssot__LoyaltyProgramGroupMemberId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyProgramGroupMemberId__c</fullName>
    <label>Loyalty Program Group Member</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyProgramGroupMemberId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>