force-app/main/default/objects/ssot__LoyaltyProgramGroupMemberRelationship__dlm/fields/ssot__MemberName__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberName__c</fullName>
    <label>Member Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>