force-app/main/default/objects/ssot__LoyaltyProgramGroupMemberRelationship__dlm/fields/ssot__MemberPointContributionPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__MemberPointContributionPercent__c</fullName>
    <label>Member Point Contribution Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MemberPointContributionPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>