force-app/main/default/objects/ssot__LoyaltyProgramGroupMemberRelationship__dlm/fields/ssot__rel_1697761228745_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761228745_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramGroupMemberRelationshi_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramGroupMemberRelationshi_rel</relationshipLabel>
    <relationshipName>rel_1697761228745_end</relationshipName>
    <type>Lookup</type>
</CustomField>